update: module messaging
